# clevertui

./: .gitignore  Cargo.toml  LICENSE  Readme.md
.github/workflows/: debug_build.yml
src/: app.rs  event.rs  main.rs  ui.rs  update.rs
