[package]
name = "clevertui"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.28.0"
ratatui = "0.29.0"
unicode-width = "0.2.0"
chrono = "0.4.38"
cleverlib = { path = "../clever/cleverlib" }
