[package]
name = "clever"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "TUI to search through clef logs"
keywords = ["tui", "logs", "clef", "events", "cleverlib"]
repository = "https://github.com/hackinghieser/clevertui"
license = "MIT"
[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
crossterm = "0.28.0"
ratatui = "0.29.0"
unicode-width = "0.2.0"
chrono = "0.4.38"
cleverlib = "0.1.4"
